updated resume and project

--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@ section{
     <div class="card bg-danger">
       <div class="card-body text-center">
         <img src="./img/codeport.svg" alt="logo" style="width:120px; height:120px" class="img-fluid">
-        <p class="card-text">Online Exam<br><br>Its a online exam in java in which you need to test your java knowledge.</p><br>
+        <p class="card-text">Task Manager<br><br>It will help you to manage your daily day-to-day tasks.</p><br>
         <div class="container">
-          <a href="Exam.java" class="btn btn-info " target="_blank" role="button">GET CODE</a>
+          <a href="https://github.com/GoyalPravesh/TaskManager" class="btn btn-info " target="_blank" role="button">VISIT</a>
           </div>
       </div>
     </div> 
