updated project link

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ section{
         <img src="./img/codeport.svg" alt="logo" style="width:120px; height:120px" class="img-fluid">
         <p class="card-text">Task Manager<br><br>It will help you to manage your daily day-to-day tasks.</p><br>
         <div class="container">
-          <a href="https://github.com/GoyalPravesh/TaskManager" class="btn btn-info " target="_blank" role="button">VISIT</a>
+          <a href="https://goyalpravesh.github.io/TaskManager/" class="btn btn-info " target="_blank" role="button">VISIT</a>
           </div>
       </div>
     </div> 
