updated github and linkedin links

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@ section{
             <p>pravesh171590.cse@chitkara.edu.in</p>
             <div class="row">
               <div class="col-12 col-md-6">
-                <a href="https://github.com/Prateekmiglani17" target="_blank"><img src="./img/github_PNG40.png" class="img-fluid" style="width:35px;height:35px;">
-                  <a href="https://linkedin.com/in/prateek-miglani-98a619155" target="_blank"><img src="./img/linked.png" class="img-fluid" style="width:27px;height:27px;"></a></a>
+                <a href="https://github.com/GoyalPravesh" target="_blank"><img src="./img/github_PNG40.png" class="img-fluid" style="width:35px;height:35px;">
+                  <a href="https://www.linkedin.com/in/pravesh-goyal/" target="_blank"><img src="./img/linked.png" class="img-fluid" style="width:27px;height:27px;"></a></a>
                   <br>
                   <br>
                   </div>
